@@ -1,3 +1,8 @@
+2005-01-20  Graydon Hoare  <graydon@redhat.com>
+
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c (env_union):
+	Use union to avoid type-punning warning.
+
 2005-01-19  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/DefaultListSelectionModel.java
